--- a/.github/workflows/app-customer-workflow.yml
+++ b/.github/workflows/app-customer-workflow.yml
@@ -1,8 +1,10 @@
 name: App CI/CD
 
 on:
+  workflow_dispatch:
   pull_request:
-    branches: [ "main" ]
+    branches:
+      - main
 
 jobs:
   build-and-test:
@@ -27,9 +29,10 @@ jobs:
         run: npm test
 
   build-and-push:
-      runs-on: ubuntu-latest
+    runs-on: ubuntu-latest
+    needs: build-and-test
 
-      steps:
+    steps:
       - name: Checkout Repository
         uses: actions/checkout@v2
 
@@ -43,18 +46,18 @@ jobs:
 
       - name: Build and Push to ECR
         run: |
-          aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin 905418088791.dkr.ecr.us-east-1.amazonaws.com
+          aws ecr get-login-password --region ${{ secrets.AWS_REGION }} | docker login --username AWS --password-stdin ${{ secrets.AWS_ECR_PASSWORD}}
           docker build -t customer/production .
-          docker tag customer/production:latest 905418088791.dkr.ecr.us-east-1.amazonaws.com/customer/production:latest
-          docker push 905418088791.dkr.ecr.us-east-1.amazonaws.com/customer/production:latest
+          docker tag customer/production:latest ${{ secrets.AWS_ECR_PASSWORD}}/customer/production:latest
+          docker push ${{ secrets.AWS_ECR_PASSWORD}}/customer/production:latest
 
   deploy-aws:
     runs-on: ubuntu-latest
     needs: build-and-push
     steps:
-    - name: Configure AWS CLI
-      run: aws configure set aws_access_key_id ${{ secrets.AWS_ACCESS_KEY_ID }} && aws configure set aws_secret_access_key ${{ secrets.AWS_SECRET_ACCESS_KEY }} && aws configure set aws_session_token ${{ secrets.AWS_SESSION_TOKEN }}
-      
-    - name: Deploy to ECS
-      run: |
-        aws ecs update-service --cluster customer-ecs-cluster --service customer-web --force-new-deployment --region ${{ secrets.AWS_REGION }}
+      - name: Configure AWS CLI
+        run: aws configure set aws_access_key_id ${{ secrets.AWS_ACCESS_KEY_ID }} && aws configure set aws_secret_access_key ${{ secrets.AWS_SECRET_ACCESS_KEY }} && aws configure set aws_session_token ${{ secrets.AWS_SESSION_TOKEN }}
+
+      - name: Deploy to ECS
+        run: |
+          aws ecs update-service --cluster customer-ecs-cluster --service customer-web --force-new-deployment --region ${{ secrets.AWS_REGION }}
