--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "jsonwebtoken": "^9.0.2",
     "mysql": "^2.18.1",
     "node-cron": "^3.0.3",
+    "nodemailer": "^6.9.11",
     "pg": "^8.11.0",
     "swagger-ui-express": "^4.6.3",
     "url": "^0.11.3",
@@ -36,6 +37,7 @@
     "@types/mysql": "^2.15.21",
     "@types/node": "^20.3.0",
     "@types/node-cron": "^3.0.11",
+    "@types/nodemailer": "^6.4.14",
     "@types/sinon": "^17.0.3",
     "@types/swagger-ui-express": "^4.1.3",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
